Делаю раздел сетки в каталоге

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 /*параметры шрифта
-/*параметры шрифта
 regular 400
 medium 500
 bold 700
@@ -53,8 +52,9 @@ a { text-decoration: none; }
   cursor: pointer;
 }
 
-.button:active,
-.button:focus { color: rgba(255, 255, 255, 0.3); }
+.button:active, .button:focus { 
+  color: rgba(255, 255, 255, 0.3);
+}
 
 /* Блок центровщик*/
 .container {
@@ -753,13 +753,11 @@ a.cart::before {
   font-weight: 500;
 }
 
-
+/*Блок формы Стоимость*/
 .filter-item {
   margin: 0;
   padding: 0;
-  
   border: none;
-  
 }
 
 .range-filter {
@@ -776,28 +774,23 @@ a.cart::before {
 
 .range-controls {
   position: relative;
-  
   height: 41px;
   margin-bottom: 15px;
   padding-top: 39px;
   padding-right: 20px;
   padding-left: 20px;
-  
   background-color: #f1f1f1;
-  
   border-radius: 5px;
 }
 
 .range-controls .scale {
   height: 2px;
-
   background: #d7dcde;
 }
 
 .range-controls .bar {
   width: 70%;
   height: 2px;
-
   background: #00ca74;
 }
 
@@ -805,11 +798,9 @@ a.cart::before {
   position: absolute;
   top: 31px;
   left: 0;
-  
   width: 4px;
   height: 4px;
   padding: 0;
-
   border: 8px solid #ffffff;
   background-color: #ababab;
   box-shadow: 0 2px 1px 0 #cfcfcf;
@@ -832,7 +823,6 @@ a.cart::before {
 .price-controls label {
   display: inline-block;
   width: 50%;
-  
   font-size: 16px;
   text-transform: uppercase;
 }
@@ -841,12 +831,10 @@ a.cart::before {
   width: 60px;
   padding: 8px 10px;
   margin-left: 10px;
-  
   font:inherit;
   font-size: 16px;
   text-align: center;
   color: #283136;
-  
   border: none;
   border-radius: 5px;
   background: #f1f1f1;
@@ -856,7 +844,17 @@ a.cart::before {
   text-align: right;
 }
 
+/*блок Сетки*/
+.list-layout li {
+  padding-bottom: 10px;	
+}
 
+
+.radio-control {
+  position: relative;
+  padding-left: 30px;
+  cursor: pointer;
+}
 
 
 
